// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default SearchBar component should render with a custom clear icon 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#393e42",
        "borderBottomColor": "#000",
        "borderBottomWidth": 1,
        "borderTopColor": "#000",
        "borderTopWidth": 1,
        "padding": 8,
      },
      undefined,
      false,
    ]
  }
>
  <Input
    containerStyle={
      Object {
        "width": "100%",
      }
    }
    inputContainerStyle={
      Array [
        Object {
          "backgroundColor": "#303337",
          "borderBottomWidth": 0,
          "borderRadius": 3,
          "height": 30,
          "overflow": "hidden",
        },
        undefined,
        false,
        false,
      ]
    }
    inputStyle={
      Array [
        Object {
          "color": "#86939e",
        },
        undefined,
      ]
    }
    leftIcon={
      <Icon
        color="#86939e"
        name="magnify"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={18}
        type="material-community"
        underlayColor="white"
      />
    }
    leftIconContainerStyle={
      Array [
        Object {
          "marginLeft": 8,
        },
        undefined,
      ]
    }
    onBlur={[Function]}
    onChangeText={[Function]}
    onClear={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#86939e"
    rightIcon={
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      />
    }
    rightIconContainerStyle={
      Array [
        Object {
          "marginRight": 8,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`Default SearchBar component should render with a custom clear icon component 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#393e42",
        "borderBottomColor": "#000",
        "borderBottomWidth": 1,
        "borderTopColor": "#000",
        "borderTopWidth": 1,
        "padding": 8,
      },
      undefined,
      false,
    ]
  }
>
  <Input
    containerStyle={
      Object {
        "width": "100%",
      }
    }
    inputContainerStyle={
      Array [
        Object {
          "backgroundColor": "#303337",
          "borderBottomWidth": 0,
          "borderRadius": 3,
          "height": 30,
          "overflow": "hidden",
        },
        undefined,
        false,
        false,
      ]
    }
    inputStyle={
      Array [
        Object {
          "color": "#86939e",
        },
        undefined,
      ]
    }
    leftIcon={
      <Icon
        color="#86939e"
        name="magnify"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={18}
        type="material-community"
        underlayColor="white"
      />
    }
    leftIconContainerStyle={
      Array [
        Object {
          "marginLeft": 8,
        },
        undefined,
      ]
    }
    onBlur={[Function]}
    onChangeText={[Function]}
    onClear={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#86939e"
    rightIcon={
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      />
    }
    rightIconContainerStyle={
      Array [
        Object {
          "marginRight": 8,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`Default SearchBar component should render with a custom methods 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#393e42",
        "borderBottomColor": "#000",
        "borderBottomWidth": 1,
        "borderTopColor": "#000",
        "borderTopWidth": 1,
        "padding": 8,
      },
      undefined,
      false,
    ]
  }
>
  <Input
    containerStyle={
      Object {
        "width": "100%",
      }
    }
    inputContainerStyle={
      Array [
        Object {
          "backgroundColor": "#303337",
          "borderBottomWidth": 0,
          "borderRadius": 3,
          "height": 30,
          "overflow": "hidden",
        },
        undefined,
        false,
        false,
      ]
    }
    inputStyle={
      Array [
        Object {
          "color": "#86939e",
        },
        undefined,
      ]
    }
    leftIcon={
      <Icon
        color="#86939e"
        name="magnify"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={18}
        type="material-community"
        underlayColor="white"
      />
    }
    leftIconContainerStyle={
      Array [
        Object {
          "marginLeft": 8,
        },
        undefined,
      ]
    }
    onBlur={[Function]}
    onChangeText={[Function]}
    onClear={[MockFunction]}
    onFocus={[Function]}
    placeholderTextColor="#86939e"
    rightIcon={
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      />
    }
    rightIconContainerStyle={
      Array [
        Object {
          "marginRight": 8,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`Default SearchBar component should render with a custom search icon 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#393e42",
        "borderBottomColor": "#000",
        "borderBottomWidth": 1,
        "borderTopColor": "#000",
        "borderTopWidth": 1,
        "padding": 8,
      },
      undefined,
      Object {
        "backgroundColor": "#e1e8ee",
        "borderBottomColor": "#e1e1e1",
        "borderTopColor": "#e1e1e1",
      },
    ]
  }
>
  <Input
    containerStyle={
      Object {
        "width": "100%",
      }
    }
    inputContainerStyle={
      Array [
        Object {
          "backgroundColor": "#303337",
          "borderBottomWidth": 0,
          "borderRadius": 3,
          "height": 30,
          "overflow": "hidden",
        },
        undefined,
        Object {
          "backgroundColor": "#bdc6cf",
        },
        false,
      ]
    }
    inputStyle={
      Array [
        Object {
          "color": "#86939e",
        },
        undefined,
      ]
    }
    leftIcon={
      <Icon
        color="#86939e"
        name="magnify"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={50}
        type="material-community"
        underlayColor="white"
      />
    }
    leftIconContainerStyle={
      Array [
        Object {
          "marginLeft": 8,
        },
        undefined,
      ]
    }
    onBlur={[Function]}
    onChangeText={[Function]}
    onClear={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#86939e"
    rightIcon={
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      />
    }
    rightIconContainerStyle={
      Array [
        Object {
          "marginRight": 8,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`Default SearchBar component should render with a custom search icon component 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#393e42",
        "borderBottomColor": "#000",
        "borderBottomWidth": 1,
        "borderTopColor": "#000",
        "borderTopWidth": 1,
        "padding": 8,
      },
      undefined,
      false,
    ]
  }
>
  <Input
    containerStyle={
      Object {
        "width": "100%",
      }
    }
    inputContainerStyle={
      Array [
        Object {
          "backgroundColor": "#303337",
          "borderBottomWidth": 0,
          "borderRadius": 3,
          "height": 30,
          "overflow": "hidden",
        },
        undefined,
        false,
        Object {
          "borderRadius": 15,
        },
      ]
    }
    inputStyle={
      Array [
        Object {
          "color": "#86939e",
        },
        undefined,
      ]
    }
    leftIcon={<View />}
    leftIconContainerStyle={
      Array [
        Object {
          "marginLeft": 8,
        },
        undefined,
      ]
    }
    onBlur={[Function]}
    onChangeText={[Function]}
    onClear={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#86939e"
    rightIcon={
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      />
    }
    rightIconContainerStyle={
      Array [
        Object {
          "marginRight": 8,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`Default SearchBar component should render with icons 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#393e42",
        "borderBottomColor": "#000",
        "borderBottomWidth": 1,
        "borderTopColor": "#000",
        "borderTopWidth": 1,
        "padding": 8,
      },
      Object {
        "height": 70,
      },
      Object {
        "backgroundColor": "#e1e8ee",
        "borderBottomColor": "#e1e1e1",
        "borderTopColor": "#e1e1e1",
      },
    ]
  }
>
  <Input
    containerStyle={
      Object {
        "width": "100%",
      }
    }
    inputContainerStyle={
      Array [
        Object {
          "backgroundColor": "#303337",
          "borderBottomWidth": 0,
          "borderRadius": 3,
          "height": 30,
          "overflow": "hidden",
        },
        undefined,
        Object {
          "backgroundColor": "#bdc6cf",
        },
        false,
      ]
    }
    inputStyle={
      Array [
        Object {
          "color": "#86939e",
        },
        undefined,
      ]
    }
    leftIcon={
      <Icon
        color="#86939e"
        name="magnify"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={18}
        type="material-community"
        underlayColor="white"
      />
    }
    leftIconContainerStyle={
      Array [
        Object {
          "marginLeft": 8,
        },
        undefined,
      ]
    }
    onBlur={[Function]}
    onChangeText={[Function]}
    onClear={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#86939e"
    rightIcon={
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <ActivityIndicator
          animating={true}
          color="#999999"
          hidesWhenStopped={true}
          size="small"
          style={
            Array [
              Object {
                "marginRight": 5,
              },
              Object {
                "flex": 1,
              },
            ]
          }
        />
      </View>
    }
    rightIconContainerStyle={
      Array [
        Object {
          "marginRight": 8,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`Default SearchBar component should render without clear icon 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#393e42",
        "borderBottomColor": "#000",
        "borderBottomWidth": 1,
        "borderTopColor": "#000",
        "borderTopWidth": 1,
        "padding": 8,
      },
      undefined,
      false,
    ]
  }
>
  <Input
    containerStyle={
      Object {
        "width": "100%",
      }
    }
    inputContainerStyle={
      Array [
        Object {
          "backgroundColor": "#303337",
          "borderBottomWidth": 0,
          "borderRadius": 3,
          "height": 30,
          "overflow": "hidden",
        },
        undefined,
        false,
        false,
      ]
    }
    inputStyle={
      Array [
        Object {
          "color": "#86939e",
        },
        undefined,
      ]
    }
    leftIcon={
      <Icon
        color="#86939e"
        name="magnify"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={18}
        type="material-community"
        underlayColor="white"
      />
    }
    leftIconContainerStyle={
      Array [
        Object {
          "marginLeft": 8,
        },
        undefined,
      ]
    }
    onBlur={[Function]}
    onChangeText={[Function]}
    onClear={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#86939e"
    rightIcon={
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      />
    }
    rightIconContainerStyle={
      Array [
        Object {
          "marginRight": 8,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`Default SearchBar component should render without issues 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#393e42",
        "borderBottomColor": "#000",
        "borderBottomWidth": 1,
        "borderTopColor": "#000",
        "borderTopWidth": 1,
        "padding": 8,
      },
      undefined,
      false,
    ]
  }
>
  <Input
    containerStyle={
      Object {
        "width": "100%",
      }
    }
    inputContainerStyle={
      Array [
        Object {
          "backgroundColor": "#303337",
          "borderBottomWidth": 0,
          "borderRadius": 3,
          "height": 30,
          "overflow": "hidden",
        },
        undefined,
        false,
        false,
      ]
    }
    inputStyle={
      Array [
        Object {
          "color": "#86939e",
        },
        undefined,
      ]
    }
    leftIcon={
      <Icon
        color="#86939e"
        name="magnify"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={18}
        type="material-community"
        underlayColor="white"
      />
    }
    leftIconContainerStyle={
      Array [
        Object {
          "marginLeft": 8,
        },
        undefined,
      ]
    }
    onBlur={[Function]}
    onChangeText={[Function]}
    onClear={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#86939e"
    rightIcon={
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      />
    }
    rightIconContainerStyle={
      Array [
        Object {
          "marginRight": 8,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`Default SearchBar component should render without search icon 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#393e42",
        "borderBottomColor": "#000",
        "borderBottomWidth": 1,
        "borderTopColor": "#000",
        "borderTopWidth": 1,
        "padding": 8,
      },
      undefined,
      false,
    ]
  }
>
  <Input
    containerStyle={
      Object {
        "width": "100%",
      }
    }
    inputContainerStyle={
      Array [
        Object {
          "backgroundColor": "#303337",
          "borderBottomWidth": 0,
          "borderRadius": 3,
          "height": 30,
          "overflow": "hidden",
        },
        undefined,
        false,
        false,
      ]
    }
    inputStyle={
      Array [
        Object {
          "color": "#86939e",
        },
        undefined,
      ]
    }
    leftIcon={null}
    leftIconContainerStyle={
      Array [
        Object {
          "marginLeft": 8,
        },
        undefined,
      ]
    }
    onBlur={[Function]}
    onChangeText={[Function]}
    onClear={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#86939e"
    rightIcon={
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      />
    }
    rightIconContainerStyle={
      Array [
        Object {
          "marginRight": 8,
        },
        undefined,
      ]
    }
  />
</View>
`;
